[package]
name = "uhttp_request"
version = "0.5.1"
authors = ["Mick Koch <mick@kochm.co>"]
description = "HTTP request start-line and header field parsers"
license = "MIT"
documentation = "https://docs.rs/uhttp_request"
repository = "https://github.com/kchmck/uhttp_request"
keywords = ["http", "request", "request-line", "header", "headers"]

[dependencies]

memchr = "1.0"
